Add thumbnail media images to nav.

--- a/Website/footer.html
+++ b/Website/footer.html
@@ -1,4 +1,5 @@
 <hr/>
 <footer>
-  <a target="_blank" href="https://github.com/AAAAAAidan">&copy;Aidan</a>
+  <a target="_blank" href="https://github.com/AAAAAAidan/SiIvaGunner-Database"><img alt="GitHub" src="images/GitHub-Dark.png" height="20" width="20"></a>
+  <a target="_blank" href="https://www.youtube.com/channel/UC6ajqR7lEYf-33Gsj4lgVOA/playlists?view=1&sort=lad"><img alt="YouTube" src="images/YouTube-Round.png" height="20" width="20"></a>
 </footer>
