--- a/Website/nav.html
+++ b/Website/nav.html
@@ -1,10 +1,10 @@
 <header>
   <a id="headerLink" href="index.php">SiIvaGunner Database</a>
 </header>
-<div id="nav">
+<nav>
   <ul>
     <li><a id="databaseLink" href="index.php">Search database</a></li>
     <li><a id="generatorLink" href="generator.php">Generate rip template</a></li>
     <li><a id="reportLink" href="report.php">Report a bug</a></li>
   </ul>
-</div>
+</nav>
