Replace id input with email input in report

--- a/website-files/footer.html
+++ b/website-files/footer.html
@@ -1,5 +1,5 @@
 
 <footer>
   <a target="_blank" href="https://github.com/AAAAAAidan/SiIvaGunner-Database"><img alt="GitHub" src="images/GitHub-Dark.png" height="20px" width="20px"></a>
-  <a target="_blank" href="https://www.youtube.com/channel/UC6ajqR7lEYf-33Gsj4lgVOA/playlists?view=1&sort=lad"><img alt="YouTube" src="images/YouTube-Round.png" height="20px" width="20px"></a>
+  <a target="_blank" href="https://www.youtube.com/c/AidanZamboni/playlists"><img alt="YouTube" src="images/YouTube-Round.png" height="20px" width="20px"></a>
 </footer>
